ch04/02-management: 重写开头,把'management 到底是什么'讲清楚
用户核心困惑:'你前面不是说是观察JVM吗?怎么现在又变为操作JVM了呢?
所以这个management到底是干什么的呢?'

根因:之前把 management 定位为'观察 JVM',只覆盖了读操作。
实际上 management 涵盖三类能力(读+写+触发动作),读者看到后面
'操作 JVM'自然觉得割裂。

重写思路:
- 开头直接抛出'management 到底是什么'的根本问题
- 用三类能力表(读/写/触发动作)建立完整认知,每类给具体例子
- 指出'观察只是第一类,所以读到后面会感觉割裂'
- 场段改为'作为运维和开发会做什么',明确分三类不同的事
- 方式三 Java 代码示例分三段(读/写/触发动作),和三类能力对应
- 命令行工具表增加'能力类型'列,标明每个工具是读/写/触发
- jconsole 也讲清能做三类(采样/开关/堆转储按钮)
- 标题从'暴露自身状态'改为'管理 API',避免误导